--- a/123.md
+++ b/123.md
@@ -28,7 +28,6 @@
 ## Table of Contents
 
 * [About the Project](#about-the-project)
-  * [Built With](#built-with)
 * [Getting Started](#getting-started)
   * [Prerequisites](#prerequisites)
   * [Installation](#installation)
@@ -43,26 +42,7 @@
 
 <!-- ABOUT THE PROJECT -->
 ## About The Project
-
-[![Product Name Screen Shot][product-screenshot]](https://example.com)
-
-There are many great README templates available on GitHub, however, I didn't find one that really suit my needs so I created this enhanced one. I want to create a README template so amazing that it'll be the last one you ever need.
-
-Here's why:
-* Your time should be focused on creating something amazing. A project that solves a problem and helps others
-* You shouldn't be doing the same tasks over and over like creating a README from scratch
-* You should element DRY principles to the rest of your life :smile:
-
-Of course, no one template will serve all projects since your needs may be different. So I'll be adding more in the near future. You may also suggest changes by forking this repo and creating a pull request or opening an issue.
-
-A list of commonly used resources that I find helpful are listed in the acknowledgements.
-
-### Built With
-This section should list any major frameworks that you built your project using. Leave any add-ons/plugins for the acknowledgements section. Here are a few examples.
-* [Bootstrap](https://getbootstrap.com)
-* [JQuery](https://jquery.com)
-* [Laravel](https://laravel.com)
-
+The purpose of this project is to overcome the challenge that changing market conditions present to traditional portfolio optimization. We formulate a Hidden Markov Model to detect market regimes using standardized absorption ratio, a market risk indicator, calculated by 10 MSCI U.S. sector indices. In this way, we can estimate the expected returns and corresponding covariance matrix of assets based on regimes. By design, these two parameters are calibrated to better describe the properties of different market regimes. Then, these regime-based parameters serve as the inputs of different portfolio weight optimizers, thereby constructing regime-dependent portfolios. In an asset universe consisting of U.S. equities, U.S. bonds and commodities, it is shown that regime-based portfolios have better returns, lower volatility and less tail risks compared with other competing portfolios.
 
 
 <!-- GETTING STARTED -->
