--- a/123.md
+++ b/123.md
@@ -57,8 +57,9 @@ This is an example of how to list things you need to use the software and how to
 ```sh
 pip install hmmlearn
 ```
-
-
+* PyPortfolioOpt
+```sh
+pip install PyPortfolioOpt
 ```
 
 
