--- a/123.md
+++ b/123.md
@@ -30,7 +30,11 @@
 * [About the Project](#about-the-project)
 * [Getting Started](#getting-started)
   * [Prerequisites](#prerequisites)
-  * [Example]
+* [Example](#Example)
+  * [Step 1](#Step 1)
+  * [Step 2](#Step 2)
+  * [Step 3](#Step 3)
+  
 
 
 
@@ -61,3 +65,7 @@ pip install PyPortfolioOpt
 Use this space to show useful examples of how a project can be used. Additional screenshots, code examples and demos work well in this space. You may also link to more resources.
 
 _For more examples, please refer to the [Documentation](https://example.com)_
+
+### Step 1
+### Step 2
+### Step 3
