--- a/123.md
+++ b/123.md
@@ -47,7 +47,10 @@ The purpose of this project is to overcome the challenge that changing market co
 ## Getting Started
 
 ### Prerequisites
-
+* sklearn
+```sh
+pip install sklearn
+```
 * hmmlearn
 ```sh
 pip install hmmlearn
@@ -61,8 +64,7 @@ pip install PyPortfolioOpt
 
 <!-- EXAMPLE -->
 ## Example
-
-Use this space to show useful examples of how a project can be used. Additional screenshots, code examples and demos work well in this space. You may also link to more resources.
+Here is an example demonstrating how we use hidden Markov Model detect market regime and construct portfolios
 
 _For more examples, please refer to the [Documentation](https://example.com)_
 
