--- a/123.md
+++ b/123.md
@@ -31,9 +31,9 @@
 * [Getting Started](#getting-started)
   * [Prerequisites](#prerequisites)
 * [Example](#Example)
-  * [Step 1](#Step 1)
-  * [Step 2](#Step 2)
-  * [Step 3](#Step 3)
+  * [Step 1](#step 1)
+  * [Step 2](#step 2)
+  * [Step 3](#step 3)
   
 
 
