--- a/123.md
+++ b/123.md
@@ -30,7 +30,7 @@
 * [About the Project](#about-the-project)
 * [Getting Started](#getting-started)
   * [Prerequisites](#prerequisites)
-* [Example](#Example)
+* [Example](#example)
   * [Step 1](#step 1)
   * [Step 2](#step 2)
   * [Step 3](#step 3)
