--- a/123.md
+++ b/123.md
@@ -69,5 +69,17 @@ Here is an example demonstrating how we use hidden Markov Model detect market re
 _For more examples, please refer to the [Documentation](https://example.com)_
 
 ### Step 1
+```python
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+from sklearn.decomposition import PCA
+
+AR = AbsorptionRatio(data,spx)
+ar = AR.absorption_ratio(num_pc = 3) #absorption ratio
+delta = AR.delta_ar(ar) #standardized absorption ratio
+AR.visualize(ar,spx) #compare S&P500 index with absorption ratio
+```
+
 ### Step 2
 ### Step 3
