--- a/123.md
+++ b/123.md
@@ -69,6 +69,7 @@ Here is an example demonstrating how we use hidden Markov Model detect market re
 _For more examples, please refer to the [Documentation](https://example.com)_
 
 ### Step 1
+This step calculates absorption ratio from 10 MSCI U.S. sector indices.
 ```python
 import pandas as pd
 import numpy as np
@@ -76,10 +77,35 @@ import matplotlib.pyplot as plt
 from sklearn.decomposition import PCA
 
 AR = AbsorptionRatio(data,spx)
-ar = AR.absorption_ratio(num_pc = 3) #absorption ratio
+ar = AR.absorption_ratio(num_pc = 3) #absorption ratio with 3 principal components
 delta = AR.delta_ar(ar) #standardized absorption ratio
 AR.visualize(ar,spx) #compare S&P500 index with absorption ratio
 ```
 
 ### Step 2
+This step implements hidden Markov Model on standardized absorption ratio and identify market regimes.
+```python
+from hmmlearn.hmm import GaussianHMM
+from datetime import datetime
+
+bt = BackTest(delta)
+regime = bt.detect_regime(days_to_train = 1500,rebalance=60,min_length=100) #get regime
+bt.plot_regime_color(spx) #plot regime
+```
 ### Step 3
+This step constructs regime-based portfolios and compare with their counterparts. For each optimizer, two portfolios are constructed at the same time.
+One is regime-based portfolio, one is not using regime information obtained from step 2.
+```python
+from pypfopt import EfficientFrontier
+from pypfopt import objective_functions
+import pyfolio as pf
+
+asset = pd.read_csv('trading_asset.csv',index_col=0)
+price = asset.join(regime,how='inner')
+tickers = asset.columns
+
+pfo = Portfolio(price,tickers)
+
+#construct portoflio using a chosen optimizer
+pfo.construct_portfolio(method='max return given risk', target_vol = 0.15)
+```
