--- a/123.md
+++ b/123.md
@@ -66,7 +66,7 @@ pip install PyPortfolioOpt
 ## Example
 Here is an example demonstrating how we use hidden Markov Model detect market regime and construct portfolios
 
-_For more examples, please refer to the [Documentation](https://example.com)_
+_For the full example, please refer to the [Code](https://example.com)_
 
 ### Step 1
 This step calculates absorption ratio from 10 MSCI U.S. sector indices.
@@ -108,4 +108,14 @@ pfo = Portfolio(price,tickers)
 
 #construct portoflio using a chosen optimizer
 pfo.construct_portfolio(method='max return given risk', target_vol = 0.15)
+```
+After constructing portfolios, we can compare portfolios performance.
+
+```python
+p1 = pfo.value_special.copy() #portfolio 1
+p2 = pfo.value_base.copy() #portfolio 2
+p1.columns = ['special']
+p2.columns = ['base']
+p = p1.join(p2, how='inner')
+bt.plot_regime_color(p)
 ```
