--- a/123.md
+++ b/123.md
@@ -66,7 +66,7 @@ pip install PyPortfolioOpt
 ## Example
 Here is an example demonstrating how we use hidden Markov Model detect market regime and construct portfolios
 
-_For the full example, please refer to the [Code](https://example.com)_
+_For the full example, please refer to the [Code](https://github.com/stanleyjin1996/Aces/blob/master/Code/project%20code.ipynb)_
 
 ### Step 1
 This step calculates absorption ratio from 10 MSCI U.S. sector indices.
